--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["oliver <oliver.giersch@googlemail.com>"]
 edition = "2018"
 
 [dependencies]
+arrayvec = "0.4.10"
+lazy_static = "1.2.0"
+reclaim = { git = "https://github.com/oliver-giersch/reclaim.git" }
