--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["oliver <oliver.giersch@googlemail.com>"]
 edition = "2018"
 
+[features]
+count-release = []
+
 [dependencies]
 arrayvec = "0.4.10"
 lazy_static = "1.2.0"
