adds more unit tests (retired and hazard modules) adds feature for config of reclamation frequency adds example for treiber stack

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [features]
 count-release = []
+maximum-reclamation-freq = []
+reduced-reclamation-freq = []
 
 [dependencies]
 arrayvec = "0.4.10"
