renames `acquire_hazard_for` to `get_hazard` or `wrap_hazard` shortens `Guarded::clone` method and adds sync comment (WIP) adapts all sync comments in guarded.rs adds tests module to guarded fixes attributes in lib.rs changes self receiver type for `LocalAccess` methods implements From for `arrayvec::CapacityError` for `RecycleErr` rewrites tests for local ...more misc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ branch = "master"
 default-features = false
 
 [dev-dependencies]
-assert_matches = "1.3.0"
+matches = "0.1.8"
 
 [[example]]
 name = "hash_set"
