fixes failing build issue adds integration test(s) removes tests mod (now integration test) appends build + license badges to README.md adds 1 local.rs unit test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ required-features = ["std"]
 
 [[test]]
 name = "integration"
-required-features = ["std"]
+required-features = ["std", "count-release", "maximum-reclamation-freq"]
 
 [profile.dev]
 opt-level = 1
