--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 cache: cargo
 
 rust:
-  - 1.34.0
+  - 1.34.0 # up to 1.35.0
   - stable
   - beta
   - nightly
@@ -10,9 +10,10 @@ rust:
 script:
   - cargo build --verbose
   - cargo test --verbose
+  - cargo test --test integration --features  "count-release maximum-reclamation-freq"
 
 matrix:
   allow_failures:
     - rust: nightly
     - rust: beta
- 
+
