hash_set: - restructures code (iter module) - rewrites iter code (use-after-free still there) hazptr: - fixes TSAN reported data race (list.rs) - removes (unused) testing functions - use feature-gated non-relaxed orderings when TSAN is used - adds sanitze-threads feature for TSAN

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ maximum-reclamation-freq = []
 # attempt to reclaim records less often (less expensive)
 reduced-reclamation-freq = []
 
+sanitize-threads = []
+
 [dependencies]
 cfg-if = "0.1.7"
 
@@ -53,4 +55,4 @@ name = "integration"
 required-features = ["std", "count-release", "maximum-reclamation-freq"]
 
 [profile.dev]
-opt-level = 1
+#opt-level = 1
