--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 cache: cargo
 
 rust:
-  - 1.36.0
+#  - 1.36.0
   - stable
   - beta
   - nightly
@@ -11,6 +11,8 @@ script:
   - cargo build --verbose
   - cargo test --verbose
   - cargo test --test integration --features  "count-release maximum-reclamation-freq"
+# - cargo build --no-default-features --verbose
+# - cargo test --no-default-features --verbose
 
 matrix:
   allow_failures:
