--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,9 @@ version = "0.4.10"
 default-features = false
 
 [dependencies.reclaim]
-version = "0.1.0"
+#version = "0.1.0"
+git = "https://github.com/oliver-giersch/reclaim"
+branch = "0.2.x"
 default-features = false
 
 [dev-dependencies]
