--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hazptr"
 description = "hazard pointer based concurrent memory reclamation"
-version = "0.2.0"
+version = "0.1.0"
 authors = ["Oliver Giersch"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
@@ -19,11 +19,7 @@ std = ["arrayvec/std", "reclaim/std"]
 # reclamation threshold is based on count of hazard pointer releases
 count-release = []
 
-# attempt to reclaim records after every operation (more expensive)
-maximum-reclamation-freq = []
-# attempt to reclaim records less often (less expensive)
-reduced-reclamation-freq = []
-
+# for instrumentation with TSAN
 sanitize-threads = []
 
 [dependencies]
@@ -53,4 +49,4 @@ required-features = ["std"]
 
 [[test]]
 name = "integration"
-required-features = ["std", "count-release", "maximum-reclamation-freq"]
+required-features = ["std", "count-release"]
