updates to CI and README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/oliver-giersch/hazptr.git"
 documentation = "https://docs.rs/hazptr"
 keywords = ["hazard", "pointer", "concurrent", "reclamation", "lock-free"]
 edition = "2018"
+build = "build.rs"
 
 [features]
 default = ["std"]
