--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: rust
 cache: cargo
 
-rust:
-  - 1.28.0
-  - stable
-  - beta
-  - nightly
-
-script:
-  - cargo build --verbose
-  - cargo test --verbose
-  - env HAZPTR_SCAN_FREQ=1 cargo test --test integration --features  "count-release"
-# - cargo build --no-default-features --verbose
-# - cargo test --no-default-features --verbose
+branches:
+    only:
+      - master
 
 matrix:
-  allow_failures:
+  fast_finish: true
+  include:
+    - rust: 1.31.0
+      script: ./ci/2018edition.sh
+    - rust: 1.36.0
+      script: ./ci/default.sh
+    - rust: stable
+      script: ./ci/default.sh
     - rust: nightly
+      script: ./ci/default.sh
     - rust: beta
+      script: ./ci/default.sh
 
