--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ version = "0.4.11"
 default-features = false
 
 [dependencies.conquer-once]
-git = "https://github.com/oliver-giersch/conquer-once"
+version = "0.1.0"
 default-features = false
 
 [dependencies.reclaim]
