refactor rewrite based on updated reclaim API

--- a/hazptr_rewrite/Cargo.toml
+++ b/hazptr_rewrite/Cargo.toml
@@ -9,6 +9,9 @@ default = ["std"]
 
 std = ["arrayvec/std"]
 
+[dependencies]
+cfg-if = "0.1.10"
+
 [dependencies.arrayvec]
 version = "0.5.1"
 default-features = false
