--- a/hazptr_rewrite/Cargo.toml
+++ b/hazptr_rewrite/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [features]
 default = ["std"]
 
-std = ["arrayvec/std"]
+std = ["arrayvec/std", "conquer-once/std", "conquer-reclaim/std"]
 
 [dependencies]
 cfg-if = "0.1.10"
@@ -17,7 +17,8 @@ version = "0.5.1"
 default-features = false
 
 [dependencies.conquer-once]
-version = "0.1.2"
+#version = "0.1.2"
+git = "https://github.com/oliver-giersch/conquer-once"
 default-features = false
 
 [dependencies.conquer-reclaim]
