--- a/hazptr_rewrite/Cargo.toml
+++ b/hazptr_rewrite/Cargo.toml
@@ -17,7 +17,7 @@ version = "0.5.1"
 default-features = false
 
 [dependencies.conquer-once]
-#version = "0.1.2"
+# version = "0.1.2"
 git = "https://github.com/oliver-giersch/conquer-once"
 default-features = false
 
@@ -26,6 +26,7 @@ git = "https://github.com/oliver-giersch/conquer-reclaim"
 default-features = false
 
 [dependencies.conquer-util]
-version = "0.2.0"
+# version = "0.2.0"
+git = "https://github.com/oliver-giersch/conquer-util"
 default-features = false
 features = ["align"]
