significant progress all around (e.g. global retire strategy implemented)

--- a/hazptr_rewrite/Cargo.toml
+++ b/hazptr_rewrite/Cargo.toml
@@ -17,12 +17,12 @@ version = "0.5.1"
 default-features = false
 
 [dependencies.conquer-once]
-# version = "0.1.2"
-git = "https://github.com/oliver-giersch/conquer-once"
+version = "0.2.0"
 default-features = false
 
 [dependencies.conquer-reclaim]
-git = "https://github.com/oliver-giersch/conquer-reclaim"
+#git = "https://github.com/oliver-giersch/conquer-reclaim"
+path = "../../conquer-reclaim"
 default-features = false
 
 [dependencies.conquer-util]
