--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = [".travis.yml", "ci/*", "DEBUG.md"]
 [features]
 default = ["std"]
 
+examples = ["conquer-reclaim/examples"]
 global = ["std"]
 std = ["arrayvec/std", "conquer-once/std", "conquer-reclaim/std"]
 
@@ -33,12 +34,6 @@ git = "https://github.com/oliver-giersch/conquer-reclaim"
 branch = "api_revision"
 default-features = false
 
-[dependencies.conquer-util]
-# version = "0.2.0"
-git = "https://github.com/oliver-giersch/conquer-util"
-default-features = false
-features = ["align"]
-
 [[bench]]
 name = "guard"
 required-features = ["global"]
@@ -49,7 +44,7 @@ required-features = ["std"]
 
 [[example]]
 name = "treiber"
-required-features = ["std"]
+required-features = ["examples", "global"]
 
 [[test]]
 name = "integration"
