--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ default = ["std"]
 examples = ["conquer-reclaim/examples"]
 # enables the "examples-debug" feature of conquer-reclaim
 examples-debug = ["conquer-reclaim/examples-debug"]
-global = ["std"]
-std = ["arrayvec/std", "conquer-once/std", "conquer-reclaim/std"]
+global = ["std", "conquer-once/std"]
+std = ["arrayvec/std", "conquer-reclaim/std"]
 
 [dependencies]
 cfg-if = "0.1.10"
@@ -31,6 +31,7 @@ default-features = false
 [dependencies.conquer-once]
 version = "0.2.0"
 default-features = false
+optional = true
 
 [dependencies.conquer-reclaim]
 git = "https://github.com/oliver-giersch/conquer-reclaim"
